--- a/src/app/modules/category/list/category-list.component.scss
+++ b/src/app/modules/category/list/category-list.component.scss
@@ -29,10 +29,11 @@
 
         img {
             // max-width: 100%;
-            width: 100%;
-            height: 400px;
+            width: 20%;
+            height: 200px;
             object-fit: cover;
-            border-radius: 20px;
+            margin-right: 10px;
+            border-radius: 10px;
         }
 
         h3 {
